--- a/url_shortner/package.json
+++ b/url_shortner/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "This is a URL shortner project",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
@@ -13,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^17.2.3",
+    "ejs": "^4.0.1",
     "express": "^5.2.1",
     "mongoose": "^9.1.5",
     "nanoid": "^5.1.6",
