production ready pdf-uploader application

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@
 /discord-bot/.env
 /Image-Upload/node_modules
 /Image-Upload/.env
+/pdf-uploader/pdf-uploader-frontend-app/node_modules
+/pdf-uploader/pdf-uploader-frontend-app/.env
+/pdf-uploader/pdf-uploader-backend-app/node_modules
+/pdf-uploader/pdf-uploader-backend-app/.env
